# d_sh_handler_2

./: .gitignore  Cargo.toml  README.md  deploy  test_run  test_run.bat
autorun/: sh_autorun
src/: bot.rs  config.dev.rs  git_checker.rs  main.rs
src/git_checker/: git-repo-watcher  git-repo-watcher-tests
