[package]
name = "d_sh_handler_2"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
telegram-bot = '0.8.0'
tokio = { version = "0.2.25", features = [ "macros" ] }
futures="*"
dotenv = "0.15.0"
# Added due to reqwest dependency problems when cross-compiling for RPi
# For deploy to rpi uncomment bellow
openssl = { version = "0.10.32", features = ["vendored"] }
openssl-sys = "0.9.67"